// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bounce output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  transform-origin: 12px 11.5px;
  transform-box: view-box;
  animation: svgm-tick-bounce 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-bounce {
  0% {
    transform: translateY(0px);
    animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  }
  23.58% {
    transform: translateY(-2.75px);
    animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
  }
  47.15% {
    transform: translateY(0px);
    animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  }
  62.97% {
    transform: translateY(-1.2375px);
    animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
  }
  78.78% {
    transform: translateY(0px);
    animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  }
  89.39% {
    transform: translateY(-0.5569px);
    animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
  }
  100% {
    transform: translateY(0px);
    animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
  }
}"
`;

exports[`bounce output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.001,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                11.5,
              ],
              "t": 7.5,
            },
            {
              "i": {
                "x": [
                  0.999,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                8.75,
              ],
              "t": 14.5727,
            },
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.001,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                11.5,
              ],
              "t": 21.6455,
            },
            {
              "i": {
                "x": [
                  0.999,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                10.2625,
              ],
              "t": 26.39,
            },
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.001,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                11.5,
              ],
              "t": 31.1345,
            },
            {
              "i": {
                "x": [
                  0.999,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                12,
                10.9431,
              ],
              "t": 34.3173,
            },
            {
              "s": [
                12,
                11.5,
              ],
              "t": 37.5,
            },
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "bounce",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`bounce output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      transform-origin: 12px 11.5px;
      transform-box: view-box;
      animation: svgm-tick-bounce 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-bounce {
      0% {
        transform: translateY(0px);
        animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
      }
      23.58% {
        transform: translateY(-2.75px);
        animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
      }
      47.15% {
        transform: translateY(0px);
        animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
      }
      62.97% {
        transform: translateY(-1.2375px);
        animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
      }
      78.78% {
        transform: translateY(0px);
        animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
      }
      89.39% {
        transform: translateY(-0.5569px);
        animation-timing-function: cubic-bezier(0.42, 0, 1, 1);
      }
      100% {
        transform: translateY(0px);
        animation-timing-function: cubic-bezier(0, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`fade output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  animation: svgm-tick-fade 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-fade {
  0% {
    opacity: 0;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    opacity: 1;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`fade output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "o": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 7.5,
            },
            {
              "s": [
                100,
              ],
              "t": 37.5,
            },
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "fade",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`fade output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      animation: svgm-tick-fade 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-fade {
      0% {
        opacity: 0;
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        opacity: 1;
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`rotate output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  transform-origin: 12px 11.5px;
  transform-box: view-box;
  animation: svgm-tick-rotate 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-rotate {
  0% {
    transform: rotate(0deg);
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    transform: rotate(360deg);
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`rotate output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
              ],
              "t": 7.5,
            },
            {
              "s": [
                360,
              ],
              "t": 37.5,
            },
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "rotate",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`rotate output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      transform-origin: 12px 11.5px;
      transform-box: view-box;
      animation: svgm-tick-rotate 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-rotate {
      0% {
        transform: rotate(0deg);
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        transform: rotate(360deg);
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`scale output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  transform-origin: 12px 11.5px;
  transform-box: view-box;
  animation: svgm-tick-scale 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-scale {
  0% {
    transform: scale(0);
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    transform: scale(1);
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`scale output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 1,
          "k": [
            {
              "i": {
                "x": [
                  0.58,
                ],
                "y": [
                  1,
                ],
              },
              "o": {
                "x": [
                  0.42,
                ],
                "y": [
                  0,
                ],
              },
              "s": [
                0,
                0,
              ],
              "t": 7.5,
            },
            {
              "s": [
                100,
                100,
              ],
              "t": 37.5,
            },
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "scale",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`scale output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      transform-origin: 12px 11.5px;
      transform-box: view-box;
      animation: svgm-tick-scale 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-scale {
      0% {
        transform: scale(0);
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        transform: scale(1);
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;

exports[`strokeDraw output stays stable > renders the same CSS 1`] = `
".svgm-tick {
  stroke-dasharray: 22.627;
  animation: svgm-tick-strokeDraw 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
}

@keyframes svgm-tick-strokeDraw {
  0% {
    stroke-dashoffset: 22.627;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
  100% {
    stroke-dashoffset: 0;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
  }
}"
`;

exports[`strokeDraw output stays stable > renders the same Lottie JSON 1`] = `
{
  "assets": [],
  "ddd": 0,
  "fr": 30,
  "h": 24,
  "ip": 0,
  "layers": [
    {
      "ao": 0,
      "bm": 0,
      "ddd": 0,
      "ind": 1,
      "ip": 0,
      "ks": {
        "a": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "o": {
          "a": 0,
          "k": [
            100,
          ],
        },
        "p": {
          "a": 0,
          "k": [
            12,
            11.5,
          ],
        },
        "r": {
          "a": 0,
          "k": [
            0,
          ],
        },
        "s": {
          "a": 0,
          "k": [
            100,
            100,
          ],
        },
      },
      "nm": "tick",
      "op": 38,
      "shapes": [
        {
          "it": [
            {
              "ind": 0,
              "ks": {
                "a": 0,
                "k": {
                  "c": false,
                  "i": [
                    [
                      0,
                      0,
                    ],
                    [
                      3.6667,
                      -3.6667,
                    ],
                    [
                      1.6667,
                      1.6667,
                    ],
                  ],
                  "o": [
                    [
                      -3.6667,
                      3.6667,
                    ],
                    [
                      -1.6667,
                      -1.6667,
                    ],
                    [
                      0,
                      0,
                    ],
                  ],
                  "v": [
                    [
                      8,
                      -5.5,
                    ],
                    [
                      -3,
                      5.5,
                    ],
                    [
                      -8,
                      0.5,
                    ],
                  ],
                },
              },
              "nm": "Path 1",
              "ty": "sh",
            },
            {
              "c": {
                "a": 0,
                "k": [
                  0.1450980392156863,
                  0.38823529411764707,
                  0.9215686274509803,
                ],
              },
              "lc": 2,
              "lj": 2,
              "nm": "Stroke",
              "o": {
                "a": 0,
                "k": 100,
              },
              "ty": "st",
              "w": {
                "a": 0,
                "k": 2,
              },
            },
            {
              "e": {
                "a": 1,
                "k": [
                  {
                    "i": {
                      "x": [
                        0.58,
                      ],
                      "y": [
                        1,
                      ],
                    },
                    "o": {
                      "x": [
                        0.42,
                      ],
                      "y": [
                        0,
                      ],
                    },
                    "s": [
                      0,
                    ],
                    "t": 7.5,
                  },
                  {
                    "s": [
                      100,
                    ],
                    "t": 37.5,
                  },
                ],
              },
              "m": 1,
              "nm": "Trim Paths",
              "o": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  0,
                ],
              },
              "ty": "tm",
            },
            {
              "a": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "nm": "Transform",
              "o": {
                "a": 0,
                "k": 100,
              },
              "p": {
                "a": 0,
                "k": [
                  0,
                  0,
                ],
              },
              "r": {
                "a": 0,
                "k": 0,
              },
              "s": {
                "a": 0,
                "k": [
                  100,
                  100,
                ],
              },
              "sa": {
                "a": 0,
                "k": 0,
              },
              "sk": {
                "a": 0,
                "k": 0,
              },
              "ty": "tr",
            },
          ],
          "nm": "tick",
          "ty": "gr",
        },
      ],
      "sr": 1,
      "st": 0,
      "ty": 4,
    },
  ],
  "markers": [],
  "nm": "strokeDraw",
  "op": 38,
  "v": "5.7.4",
  "w": 24,
}
`;

exports[`strokeDraw output stays stable > renders the same standalone SVG 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
  <style>
    .svgm-tick {
      stroke-dasharray: 22.627;
      animation: svgm-tick-strokeDraw 1s cubic-bezier(0.42, 0, 0.58, 1) 0.25s 1 both;
    }

    @keyframes svgm-tick-strokeDraw {
      0% {
        stroke-dashoffset: 22.627;
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
      100% {
        stroke-dashoffset: 0;
        animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
      }
    }
  </style>
  <path class="svgm-tick" d="M20 6C16.333 9.667 12.667 13.333 9 17C7.333 15.333 5.667 13.667 4 12" fill="none" stroke="#2563eb" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
</svg>"
`;
